--- a/zeekapp4huntingv003/default/data/ui/views/aaj_dnsDomainNameInsights.xml
+++ b/zeekapp4huntingv003/default/data/ui/views/aaj_dnsDomainNameInsights.xml
@@ -14,6 +14,7 @@
     <panel>
       <title>Domain Registration ( D- 7 days)</title>
       <table>
+        <title>Python lookup</title>
         <search>
           <query>index=zeek sourcetype="bro:dhcp:json" mac=$macToken$ 
 | stats first(_time) as first_seen by client_addr mac  host_name
@@ -26,7 +27,6 @@
         <option name="dataOverlayMode">none</option>
         <option name="drilldown">none</option>
         <option name="percentagesRow">false</option>
-        <option name="refresh.display">progressbar</option>
         <option name="rowNumbers">false</option>
         <option name="totalsRow">false</option>
         <option name="wrap">true</option>
@@ -35,6 +35,7 @@
     <panel>
       <title>Domain Registration ( D- 30 days)</title>
       <table>
+        <title>Python lookup</title>
         <search>
           <query>index=zeek sourcetype="bro:dhcp:json" mac=$macToken$ 
 | stats first(_time) as first_seen by client_addr mac  host_name
@@ -47,7 +48,6 @@
         <option name="dataOverlayMode">none</option>
         <option name="drilldown">none</option>
         <option name="percentagesRow">false</option>
-        <option name="refresh.display">progressbar</option>
         <option name="rowNumbers">false</option>
         <option name="totalsRow">false</option>
         <option name="wrap">true</option>
@@ -56,6 +56,7 @@
     <panel>
       <title>Domain Registration ( D- 90 days)</title>
       <table>
+        <title>Python lookup</title>
         <search>
           <query>index=zeek sourcetype="bro:dhcp:json" mac=$macToken$ 
 | stats first(_time) as first_seen by client_addr mac  host_name
@@ -68,7 +69,6 @@
         <option name="dataOverlayMode">none</option>
         <option name="drilldown">none</option>
         <option name="percentagesRow">false</option>
-        <option name="refresh.display">progressbar</option>
         <option name="rowNumbers">false</option>
         <option name="totalsRow">false</option>
         <option name="wrap">true</option>
@@ -99,8 +99,6 @@
         <option name="refresh.display">progressbar</option>
       </table>
     </panel>
-  </row>
-  <row>
     <panel>
       <title>Domains with High no of subdomains</title>
       <table>
