--- a/zeekapp4huntingv003/default/data/ui/views/aaj_httpOverview.xml
+++ b/zeekapp4huntingv003/default/data/ui/views/aaj_httpOverview.xml
@@ -1,5 +1,5 @@
 <form theme="dark">
-  <label>HTTP Traffic [Non-Encrypted]</label>
+  <label>HTTP Traffic Overview</label>
   <fieldset submitButton="true" autoRun="true">
     <input type="time" token="time1">
       <label>Time Range</label>
