--- a/zeekapp4huntingv003/default/data/ui/views/aaj_dnsPassive.xml
+++ b/zeekapp4huntingv003/default/data/ui/views/aaj_dnsPassive.xml
@@ -1,33 +1,24 @@
 <form theme="dark">
-  <label>Passive DNS</label>
-  <description>version 1.2</description>
-  <fieldset submitButton="true" autoRun="true">
+  <label>Passive DNS Lookup</label>
+  <description>last modified by Jinto Antony on 05 Jan 2022</description>
+  <fieldset submitButton="true" autoRun="false">
     <input type="text" token="tokenPassiveDNS">
       <label>Domain Name</label>
       <default>*</default>
     </input>
-    <input type="dropdown" token="tokenPassiveType">
-      <label>Type</label>
-      <fieldForLabel>qtype</fieldForLabel>
-      <fieldForValue>query_type</fieldForValue>
-      <search>
-        <query>eventtype=zeek_idx_sourcetype sourcetype="bro:dns:json" NOT query IN (ISATAP,WORKGROUP) query_type IN (PTR,A,SOA,NB,AAAA,SRV,TXT) query=$tokenPassiveDNS$
-| dedup query_type 
-| table query_type</query>
-        <earliest>-24h@h</earliest>
-        <latest>now</latest>
-      </search>
+    <input type="text" token="tokenipAddress">
+      <label>IP Address</label>
+      <default>*</default>
     </input>
   </fieldset>
   <row>
     <panel>
-      <title>Machine inventory</title>
+      <title>DNS enties</title>
       <table>
+        <title>create python sqlite lookup</title>
         <search>
-          <query>eventtype=zeek_idx_sourcetype sourcetype="bro:dns:json" NOT query IN (ISATAP,WORKGROUP) query=$tokenPassiveDNS$ NOT rcode_name IN (NXDOMAIN) 
-| bin span=1d _time 
-| dedup  query  answer answers   
-| table _time query query_type answer answers TTLs* rcode_name</query>
+          <query>| inputlookup aaj_passiveDNS.csv 
+| search query=$tokenPassiveDNS$ answer=$tokenipAddress$</query>
           <earliest>$earliest$</earliest>
           <latest>$latest$</latest>
         </search>
